--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_zoom_drawer: ^3.2.0
   go_router: ^14.8.1
-  google_fonts: ^6.2.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
