--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.70.2
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.17
   flutter_zoom_drawer: ^3.2.0
+  font_awesome_flutter: ^10.8.0
   go_router: ^14.8.1
   image_picker: ^1.1.2
   intl: ^0.20.2
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
