--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,21 +11,26 @@ environment:
 dependencies:
   bloc_concurrency: ^0.3.0
   bloc_test: ^10.0.0
+  cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
-  fl_chart: ^0.70.2
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  fl_chart: ^0.71.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_easyloading: ^3.0.5
+  flutter_stripe: ^11.5.0
   flutter_svg: ^2.0.17
   flutter_zoom_drawer: ^3.2.0
+  flutterfire_cli: ^1.2.0
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
-  go_router: ^14.8.1
+  go_router: ^15.1.1
   image_picker: ^1.1.2
-  intl: ^0.20.2
+  intl: 0.18.1
   local_auth: ^2.3.0
   provider: ^6.1.4
   shared_preferences: ^2.5.3
