--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,19 @@ dependencies:
   bloc_test: ^10.0.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
+  cloud_firestore: ^5.6.7
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
+  firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
+  firebase_database: ^11.3.5
   firebase_messaging: ^15.2.5
   fl_chart: ^0.71.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_easyloading: ^3.0.5
+  flutter_local_notifications: ^19.1.0
   flutter_stripe: ^11.5.0
   flutter_svg: ^2.0.17
   flutter_zoom_drawer: ^3.2.0
